--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR with WebXR</title>
+  <title>AR Segmentation</title>
   <script src="https://unpkg.com/three@0.122.0/build/three.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.7.0/dist/tf.min.js"></script>
   <style>
@@ -11,6 +11,8 @@
     canvas { display: block; }
     #startARBtn, #captureButton {
       position: absolute;
+      top: 10px;
+      left: 10px;
       z-index: 12;
       background: rgba(0, 0, 0, 0.7);
       color: white;
@@ -19,30 +21,27 @@
       border-radius: 5px;
       cursor: pointer;
     }
-    #startARBtn { top: 10px; left: 10px; }
-    #captureButton { top: 50px; left: 10px; }
+    #captureButton { top: 60px; }
     #maskImage {
-      display: block;
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      z-index: 10;
-      object-fit: contain;
+      z-index: 11;
     }
     #info {
       position: absolute;
       bottom: 10px;
       left: 10px;
-      color: white;
-      background: rgba(0, 0, 0, 0.7);
-      padding: 8px;
       z-index: 20;
-      max-width: 90%;
+      background: black;
+      color: lime;
+      padding: 10px;
       font-family: monospace;
-      font-size: 14px;
+      font-size: 12px;
       white-space: pre-wrap;
+      max-width: 100%;
     }
   </style>
 </head>
@@ -52,212 +51,142 @@
   <img id="maskImage"/>
   <div id="info">Log:</div>
 
-<script>
-let camera, scene, renderer, session, glBinding;
-let model, captureNext = false, resources;
+  <script>
+    let model, session, glBinding, gl, canvas, renderer, scene, camera, refSpace, xrCam;
+    let captureNext = false;
 
-function log(msg) {
-  document.getElementById('info').innerText += '\n' + msg;
-}
+    async function loadModel() {
+      model = await tf.loadLayersModel('jsModel/model.json');
+      log('Model loaded.');
+    }
 
-async function loadModel() {
-  try {
-    model = await tf.loadLayersModel('jsModel/model.json');
-    log('Model loaded.');
-  } catch (err) {
-    log('Model load error: ' + err.message);
-  }
-}
+    function log(msg) {
+      const info = document.getElementById('info');
+      info.textContent += "\n" + msg;
+    }
 
-async function activateXR() {
-  const canvas = document.createElement('canvas');
-  document.body.appendChild(canvas);
-  const gl = canvas.getContext('webgl', { xrCompatible: true });
+    async function startAR() {
+      canvas = document.createElement('canvas');
+      document.body.appendChild(canvas);
+      gl = canvas.getContext('webgl', { xrCompatible: true });
 
-  try {
-    session = await navigator.xr.requestSession('immersive-ar', {
-      requiredFeatures: ['hit-test', 'dom-overlay', 'camera-access'],
-      domOverlay: { root: document.body }
-    });
-  } catch (err) {
-    log('XR Session error: ' + err.message);
-    return;
-  }
+      session = await navigator.xr.requestSession('immersive-ar', {
+        requiredFeatures: ['hit-test', 'camera-access', 'dom-overlay'],
+        domOverlay: { root: document.body }
+      });
 
-  session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
-  glBinding = new XRWebGLBinding(session, gl);
-  resources = initWebGLResources(gl);
-  const referenceSpace = await session.requestReferenceSpace('local');
+      await loadModel();
 
-  renderer = new THREE.WebGLRenderer({ canvas, context: gl, alpha: true });
-  renderer.autoClear = false;
-  camera = new THREE.PerspectiveCamera();
-  camera.matrixAutoUpdate = false;
-  scene = new THREE.Scene();
+      session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
+      glBinding = new XRWebGLBinding(session, gl);
 
-  const onXRFrame = async (time, frame) => {
-    session.requestAnimationFrame(onXRFrame);
-    gl.bindFramebuffer(gl.FRAMEBUFFER, session.renderState.baseLayer.framebuffer);
+      refSpace = await session.requestReferenceSpace('local');
 
-    const pose = frame.getViewerPose(referenceSpace);
-    if (!pose) return;
-    const view = pose.views[0];
-    const viewport = session.renderState.baseLayer.getViewport(view);
-    renderer.setSize(viewport.width, viewport.height);
-    camera.matrix.fromArray(view.transform.matrix);
-    camera.projectionMatrix.fromArray(view.projectionMatrix);
-    camera.updateMatrixWorld(true);
+      renderer = new THREE.WebGLRenderer({ canvas: canvas, context: gl });
+      renderer.autoClear = false;
 
-    if (captureNext) {
-      captureNext = false;
-      try {
-        await captureImage(gl, glBinding, view.camera, resources);
-      } catch (err) {
-        log('Capture error: ' + err.message);
+      camera = new THREE.PerspectiveCamera();
+      scene = new THREE.Scene();
+
+      session.requestAnimationFrame(onXRFrame);
+    }
+
+    async function onXRFrame(time, frame) {
+      session.requestAnimationFrame(onXRFrame);
+      const pose = frame.getViewerPose(refSpace);
+      if (!pose) return;
+
+      const view = pose.views[0];
+      xrCam = view.camera;
+      if (!xrCam) {
+        log("No XR camera found.");
+        return;
+      }
+
+      const viewport = session.renderState.baseLayer.getViewport(view);
+      renderer.setSize(viewport.width, viewport.height);
+
+      camera.matrix.fromArray(view.transform.matrix);
+      camera.projectionMatrix.fromArray(view.projectionMatrix);
+      camera.updateMatrixWorld(true);
+
+      gl.bindFramebuffer(gl.FRAMEBUFFER, session.renderState.baseLayer.framebuffer);
+      renderer.render(scene, camera);
+
+      if (captureNext) {
+        captureNext = false;
+        try {
+          await captureImage(view);
+        } catch (e) {
+          log("Capture failed: " + e.message);
+        }
       }
     }
 
-    renderer.render(scene, camera);
-  };
+    async function captureImage(view) {
+      log("Capturing...");
+      const texture = glBinding.getCameraImage(view.camera);
+      if (!texture) {
+        log("No camera texture available.");
+        return;
+      }
 
-  session.requestAnimationFrame(onXRFrame);
-  document.getElementById('startARBtn').style.display = 'none';
-}
+      const width = view.camera.width;
+      const height = view.camera.height;
 
-function getShader(gl, src, type) {
-  const shader = gl.createShader(type === 'fragment' ? gl.FRAGMENT_SHADER : gl.VERTEX_SHADER);
-  gl.shaderSource(shader, src);
-  gl.compileShader(shader);
-  if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-    log('Shader error: ' + gl.getShaderInfoLog(shader));
-    return null;
-  }
-  return shader;
-}
+      const fbo = gl.createFramebuffer();
+      gl.bindFramebuffer(gl.FRAMEBUFFER, fbo);
 
-function getProgram(gl, vs, fs) {
-  const vert = getShader(gl, vs, 'vertex');
-  const frag = getShader(gl, fs, 'fragment');
-  const prog = gl.createProgram();
-  gl.attachShader(prog, vert);
-  gl.attachShader(prog, frag);
-  gl.linkProgram(prog);
-  if (!gl.getProgramParameter(prog, gl.LINK_STATUS)) {
-    log('Program error: ' + gl.getProgramInfoLog(prog));
-    return null;
-  }
-  return prog;
-}
+      const outTex = gl.createTexture();
+      gl.bindTexture(gl.TEXTURE_2D, outTex);
+      gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, width, height, 0, gl.RGBA, gl.UNSIGNED_BYTE, null);
+      gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
 
-function initWebGLResources(gl) {
-  const vertexSource = `
-    attribute vec4 aVertexPosition;
-    attribute vec2 aTextureCoord;
-    varying vec2 vTexCoord;
-    void main(void) {
-      gl_Position = aVertexPosition;
-      vTexCoord = aTextureCoord;
+      gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, outTex, 0);
+
+      gl.bindTexture(gl.TEXTURE_2D, texture);
+      gl.copyTexImage2D(gl.TEXTURE_2D, 0, gl.RGBA, 0, 0, width, height, 0);
+
+      let readback = new Uint8Array(width * height * 4);
+      gl.readPixels(0, 0, width, height, gl.RGBA, gl.UNSIGNED_BYTE, readback);
+
+      const flipped = new Uint8ClampedArray(readback.length);
+      for (let y = 0; y < height; y++) {
+        for (let x = 0; x < width; x++) {
+          const i = (y * width + x) * 4;
+          const j = ((height - y - 1) * width + x) * 4;
+          flipped.set(readback.slice(i, i + 4), j);
+        }
+      }
+
+      const offCanvas = document.createElement('canvas');
+      offCanvas.width = width;
+      offCanvas.height = height;
+      const ctx = offCanvas.getContext('2d');
+      ctx.putImageData(new ImageData(flipped, width, height), 0, 0);
+
+      const tfimg = tf.browser.fromPixels(offCanvas).div(255).resizeBilinear([224, 224]).expandDims();
+      const pred = await model.predict(tfimg);
+
+      const maskData = pred.dataSync();
+      const maskCanvas = document.createElement('canvas');
+      maskCanvas.width = 224;
+      maskCanvas.height = 224;
+      const maskCtx = maskCanvas.getContext('2d');
+      const imgData = maskCtx.createImageData(224, 224);
+
+      for (let i = 0; i < 224 * 224; i++) {
+        const val = maskData[i] * 255;
+        imgData.data.set([val, val, val, 255], i * 4);
+      }
+
+      maskCtx.putImageData(imgData, 0, 0);
+      document.getElementById('maskImage').src = maskCanvas.toDataURL();
+      log("Capture complete.");
     }
-  `;
-  const fragmentSource = `
-    #extension GL_OES_EGL_image_external : require
-    precision mediump float;
-    varying vec2 vTexCoord;
-    uniform samplerExternalOES uSampler;
-    void main(void) {
-      gl_FragColor = texture2D(uSampler, vTexCoord);
-    }
-  `;
-  const program = getProgram(gl, vertexSource, fragmentSource);
-  const texture = gl.createTexture();
-  gl.bindTexture(gl.TEXTURE_EXTERNAL_OES, texture);
-  gl.texParameteri(gl.TEXTURE_EXTERNAL_OES, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
-  gl.texParameteri(gl.TEXTURE_EXTERNAL_OES, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
-  gl.texParameteri(gl.TEXTURE_EXTERNAL_OES, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE);
-  gl.texParameteri(gl.TEXTURE_EXTERNAL_OES, gl.TEXTURE_WRAP_T, gl.CLAMP_TO_EDGE);
-  const fb = gl.createFramebuffer();
-  gl.bindFramebuffer(gl.FRAMEBUFFER, fb);
-  return { program, texture, framebuffer: fb };
-}
 
-async function captureImage(gl, glBinding, dcamera, { program, texture, framebuffer }) {
-  const img = glBinding.getCameraImage(dcamera);
-  const width = dcamera.width;
-  const height = dcamera.height;
-  if (!img) throw new Error('getCameraImage returned null');
-
-  gl.bindFramebuffer(gl.FRAMEBUFFER, framebuffer);
-  gl.useProgram(program);
-  gl.activeTexture(gl.TEXTURE0);
-  gl.bindTexture(gl.TEXTURE_EXTERNAL_OES, img);
-  gl.uniform1i(gl.getUniformLocation(program, 'uSampler'), 0);
-
-  const verts = new Float32Array([
-    -1, -1, 0, 0,
-     1, -1, 1, 0,
-    -1,  1, 0, 1,
-     1,  1, 1, 1,
-  ]);
-
-  const buf = gl.createBuffer();
-  gl.bindBuffer(gl.ARRAY_BUFFER, buf);
-  gl.bufferData(gl.ARRAY_BUFFER, verts, gl.STATIC_DRAW);
-
-  const pos = gl.getAttribLocation(program, 'aVertexPosition');
-  const tex = gl.getAttribLocation(program, 'aTextureCoord');
-  gl.enableVertexAttribArray(pos);
-  gl.vertexAttribPointer(pos, 2, gl.FLOAT, false, 16, 0);
-  gl.enableVertexAttribArray(tex);
-  gl.vertexAttribPointer(tex, 2, gl.FLOAT, false, 16, 8);
-
-  gl.viewport(0, 0, width, height);
-  gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
-
-  const pixels = new Uint8Array(width * height * 4);
-  gl.readPixels(0, 0, width, height, gl.RGBA, gl.UNSIGNED_BYTE, pixels);
-  const flipped = new Uint8ClampedArray(pixels.length);
-  for (let y = 0; y < height; y++) {
-    for (let x = 0; x < width; x++) {
-      const si = (y * width + x) * 4;
-      const di = ((height - 1 - y) * width + x) * 4;
-      flipped.set(pixels.slice(si, si + 4), di);
-    }
-  }
-
-  const cvs = document.createElement('canvas');
-  cvs.width = width;
-  cvs.height = height;
-  const ctx = cvs.getContext('2d');
-  ctx.putImageData(new ImageData(flipped, width, height), 0, 0);
-
-  const tensor = tf.browser.fromPixels(cvs).div(255.0).resizeBilinear([224, 224]).expandDims();
-  const pred = await model.predict(tensor);
-  const data = pred.dataSync();
-
-  const mask = document.getElementById('maskImage');
-  const out = document.createElement('canvas');
-  out.width = 224;
-  out.height = 224;
-  const mctx = out.getContext('2d');
-  const imgData = mctx.createImageData(224, 224);
-  for (let i = 0; i < 224 * 224; i++) {
-    const v = data[i] * 255;
-    imgData.data[i * 4] = v;
-    imgData.data[i * 4 + 1] = v;
-    imgData.data[i * 4 + 2] = v;
-    imgData.data[i * 4 + 3] = 255;
-  }
-  mctx.putImageData(imgData, 0, 0);
-  mask.src = out.toDataURL();
-  log('Segmentation completed.');
-}
-
-// === Entry point ===
-document.getElementById('startARBtn').addEventListener('click', async () => {
-  await loadModel();
-  await activateXR();
-});
-document.getElementById('captureButton').addEventListener('click', () => captureNext = true);
-</script>
+    document.getElementById('startARBtn').addEventListener('click', startAR);
+    document.getElementById('captureButton').addEventListener('click', () => captureNext = true);
+  </script>
 </body>
 </html>
